# django-repo

./: .flake8  Makefile  README.rst  pyproject.toml
core/: manage.py
core/core/utils/: collections.py
core/project/: urls.py
core/project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py
core/project/settings/templates/: settings.dev.py
